--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -115,6 +115,8 @@
     "new project": "新建项目",
     "your profile": "个人资料",
     "your repositories": "你的仓库",
+    "your organizations": "你的组织",
+    "your discussions": "你的讨论",
     "your projects": "你的项目",
     "your stars": "你关注的仓库",
     "your gists": "你的gist",
