--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -169,6 +169,14 @@
     "organizations": "组织",
 
     "__comments-9": "Repository",
+    "forked from": "复刻于",
+    "commit directly to the": "直接提交到",
+    "branch": "分支",
+    "create a": "创建一个",
+    "new branch": "新的分支",
+    "for this commit and start a pull request": "包含这条提交并打开一个拉取请求",
+    "latest commit": "最新提交",
+    "commit changes": "提交修改",
     "star": "星标",
     "unstar": "取消星标",
     "watch": "关注",
