--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -169,12 +169,36 @@
     "organizations": "组织",
 
     "__comments-9": "Repository",
+    "participating and @mentions": "参与和提及",
+    "only receive notifications from this repository when participating or @mentioned.": "仅在参与或@提及时从此存储库接收通知。",
+    "notified of all notifications on this repository.": "接收这个存储库的所有通知",
+    "never be notified.": "永不接收通知",
+    "select events you want to be notified of in addition to participating and @mentions.": "除了参与和@提及外，还选择您要通知的事件。",
+    "ignored": "忽略",
+    "custom": "自定义",
+    "edit file": "编辑文件",
+    "spaces": "使用空格缩进",
+    "tabs": "使用 Tab 缩进",
+    "no wrap": "不自动换行",
+    "soft wrap": "自动换行",
+    "history": "历史记录",
+    "contributor": "贡献者",
+    "days ago": "天前",
+    "months ago": "月前",
+    "years ago": "年前",
+    "minutes ago": "分钟前",
+    "a few": "数",
+    "seconds ago": "秒前",
+    "hours ago": "小时前",
+    "just now": "刚刚",
+    "preview changes": "预览变化",
+    "view all branches": "查看所有分支",
     "forked from": "复刻于",
     "commit directly to the": "直接提交到",
     "branch": "分支",
     "create a": "创建一个",
     "new branch": "新的分支",
-    "for this commit and start a pull request": "包含这条提交并打开一个拉取请求",
+    "for this commit and start a pull request.": "包含这条提交并打开一个拉取请求",
     "latest commit": "最新提交",
     "commit changes": "提交修改",
     "star": "星标",
